force-app/main/default/objects/Waitlist_Entry__c/Waitlist_Entry__c.object-meta.xml
<CustomObject>
    <label>Waitlist Entry</label>
    <nameField>
        <label>Waitlist Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Waitlist Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>