force-app/main/default/objects/Waitlist_Entry__c/fields/Accessibility_Needs__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Needs__c</fullName>
    <label>Accessibility Needs</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Access_Waitlist</valueSetName>
    </valueSet>
</CustomField>