force-app/main/default/objects/Waitlist_Entry__c/fields/Admin3__c.field-meta.xml
<CustomField>
    <fullName>Admin3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin3</label>
    <type>Checkbox</type>
</CustomField>