force-app/main/default/objects/Waitlist_Entry__c/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <formula>Contact__r.npsp__Deceased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deceased - Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>