force-app/main/default/objects/Waitlist_Entry__c/fields/FormulaPast12Months__c.field-meta.xml
<CustomField>
    <fullName>FormulaPast12Months__c</fullName>
    <formula>AND
(
    DATEVALUE(CreatedDate) &gt; ADDMONTHS(TODAY(),-12),
    DATEVALUE(CreatedDate) &lt; TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaPast12Months</label>
    <type>Checkbox</type>
</CustomField>