force-app/main/default/objects/Waitlist_Entry__c/fields/Household_Number__c.field-meta.xml
<CustomField>
    <fullName>Household_Number__c</fullName>
    <label>Household Number</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Household_Number_Waitlist</valueSetName>
    </valueSet>
</CustomField>