force-app/main/default/objects/Waitlist_Entry__c/fields/Income_Level__c.field-meta.xml
<CustomField>
    <fullName>Income_Level__c</fullName>
    <label>Income Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Level_Waitlist</valueSetName>
    </valueSet>
</CustomField>