force-app/main/default/objects/Waitlist_Entry__c/fields/NameFormula__c.field-meta.xml
<CustomField>
    <fullName>NameFormula__c</fullName>
    <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; 
Contact__r.LastName &amp; &quot; &quot; &amp; 
Property__r.Name &amp; &quot; &quot; &amp; 
TEXT(Number_of_Bedrooms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameFormula</label>
    <type>Text</type>
</CustomField>