force-app/main/default/objects/Waitlist_Entry__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Property__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner Property</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Waitlist Entries</relationshipLabel>
    <relationshipName>Waitlist_Entries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>