force-app/main/default/objects/Waitlist_Entry__c/fields/TM_ID__c.field-meta.xml
<CustomField>
    <fullName>TM_ID__c</fullName>
    <label>TM_ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>