force-app/main/default/objects/Waitlist_Entry__c/fields/TM_Staff__c.field-meta.xml
<CustomField>
    <fullName>TM_Staff__c</fullName>
    <label>TM_Staff</label>
    <length>30</length>
    <type>Text</type>
</CustomField>