force-app/main/default/objects/Waitlist_Entry__c/fields/Waitlist_Entry_Belongs_to_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Entry_Belongs_to_Contact_Owner__c</fullName>
    <formula>Contact__r.Contact_owner_ID__c = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlist Entry Belongs to Contact Owner</label>
    <type>Checkbox</type>
</CustomField>