force-app/main/default/objects/Waitlist_Entry__c/fields/Waitlist_Entry_Count__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Entry_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlist Entry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>