force-app/main/default/objects/Waitlist_Entry__c/fields/Waitlist_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Entry_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlist Entry ID</label>
    <type>Text</type>
</CustomField>