force-app/main/default/objects/Waitlist_Entry__c/fields/Waitlist_Entry_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Entry_Ownership_Status__c</fullName>
    <formula>IF( 
   Waitlist_Entry_Belongs_to_Contact_Owner__c,
  &quot;Self&quot;,
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlist Entry Ownership Status</label>
    <type>Text</type>
</CustomField>