force-app/main/default/objects/Waitlist_Entry__c/fields/Waitlist_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>