force-app/main/default/objects/Waitlist_Entry__c/validationRules/Must_be_Partner_Property.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_be_Partner_Property</fullName>
    <active>true</active>
    <errorConditionFormula>Property__r.RecordType.Name != &quot;Partner Property&quot;</errorConditionFormula>
    <errorDisplayField>Property__c</errorDisplayField>
    <errorMessage>You must choose a Partner Property</errorMessage>
</ValidationRule>