force-app/main/default/objects/Waitlist_Entry__c/validationRules/Pippin_WaterSt_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Pippin_WaterSt_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    $User.FirstName = &quot;Peter&quot; &amp;&amp; $User.LastName = &quot;Carter&quot;,
    FALSE,

    IF(
        TEXT(Property__r.Status__c) = &quot;Closed&quot;,
        TRUE,
        FALSE
    )
)</errorConditionFormula>
    <errorDisplayField>Property__c</errorDisplayField>
    <errorMessage>This waitlist is closed. New waitlist entries cannot be added at this time.</errorMessage>
</ValidationRule>